--- a/assets/scss/assets/blocks/header/header.scss
+++ b/assets/scss/assets/blocks/header/header.scss
@@ -1,5 +1,6 @@
-@import "../../typography/font-colors";
 @import "../../colors/colors";
+@import "../../global/breakpoints/breakpoints";
+@import "../../typography/font-colors";
 
 header {
   .container {
@@ -7,6 +8,11 @@ header {
     padding: 0 7rem 0 3.2rem;
     display: flex;
     align-items: center;
+
+    @media (max-width: $md) {
+      padding: 0 1.6rem;
+    }
+
     .header__burger-menu > div {
       cursor: pointer;
       width: 2rem;
@@ -14,16 +20,35 @@ header {
       margin: 0.4rem 0;
       border-radius: 0.15rem;
       background-color: #19202C;
+
+      @media (max-width: $sm) {
+        display: none;
+      }
     }
+
     .header__logo {
       line-height: 0;
       margin: 0 0 0 2.8rem;
+
+      @media (max-width: $sm) {
+        margin: 0 2.5rem 0 0;
+      }
     }
     .header__search-form {
       height: 4.4rem;
       width: 83rem;
       margin: 0 4rem 0 6rem;
       border-radius: 2.2rem;
+
+      @media (max-width: $md) {
+        margin: 0 4rem;
+      }
+
+      @media (max-width: $sm) {
+        width: auto;
+        margin: 0 2.5rem 0 auto;
+      }
+
       form {
         height: inherit;
         display: flex;
@@ -50,6 +75,24 @@ header {
           border-radius: 0 2.2rem 2.2rem 0;
           padding: 0;
         };
+
+        @media (max-width: $sm) {
+          display: none;
+          margin-left: auto;
+        }
+
+      }
+      .header__search-form_mobile {
+        display: none;
+        background-image: url("../img/header/search-form/lens.svg");
+        background-repeat: no-repeat;
+        background-position: center;
+
+        @media (max-width: $sm) {
+          display: block;
+          width: 4rem;
+          height: 4rem;
+        }
       }
 
     }
@@ -59,6 +102,21 @@ header {
       align-items: center;
       justify-content: space-between;
       margin-left: auto;
+
+      @media (max-width: $md) {
+        width: auto;
+        a:not(:last-child) {
+          display: none;
+        }
+        .header__user-block__user-profile {
+          margin-left: auto;
+        }
+      }
+
+      @media (max-width: $sm) {
+        margin-left: 0;
+      }
+
       a {
         margin-left: 2rem;
         &:first-child {
@@ -94,7 +152,6 @@ header {
           height: auto;
         }
       }
-
     }
   }
 }
