--- a/assets/scss/assets/colors/colors.scss
+++ b/assets/scss/assets/colors/colors.scss
@@ -1,5 +1,5 @@
 /* Alerts and Notifications */
-$color_notification_active: #e52424;
+$color_notification_active: #c2c2c2;
 
 /* Borders */
 $color_border-light: #FFFFFF;
