--- a/assets/scss/assets/typography/font-colors.scss
+++ b/assets/scss/assets/typography/font-colors.scss
@@ -6,3 +6,7 @@ $font-color_in-notification: #ffffff;
 
 /* Search-form */
 $font-color__search-placeholder: #30384C;
+
+/* Links */
+$font-color__navigation-link: #898989;
+$font-color__navigation-link_active: #FF0000;
