--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -1,8 +1,15 @@
+@import url("https://use.typekit.net/jrb6nlz.css");
+.container aside {
+  width: 20rem;
+  height: 100%;
+}
+
 /* Alerts and Notifications */
 /* Borders */
 /* Search form */
 /* Font-colors */
 /* Search-form */
+/* Links */
 header .container {
   height: 8.4rem;
   padding: 0 7rem 0 3.2rem;
@@ -141,7 +148,7 @@ header .container .header__user-block .header__user-block__notifications .notifi
   top: -0.5rem;
   right: -0.5rem;
   border: 1px solid #FFFFFF;
-  background-color: #e52424;
+  background-color: #c2c2c2;
   font-size: 1.2rem;
   color: #ffffff;
   text-align: center;
@@ -156,6 +163,78 @@ header .container .header__user-block .header__user-block__user-profile {
 header .container .header__user-block .header__user-block__user-profile img {
   width: 100%;
   height: auto;
+}
+
+/* Font-colors */
+/* Search-form */
+/* Links */
+/* Importing font: Muli - 300 / 400 / 700 / 800
+   Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
+*/
+/* Font-colors */
+/* Search-form */
+/* Links */
+* {
+  font-family: "Muli", sans-serif;
+  color: #C2C2C2;
+  font-weight: 400;
+}
+
+h1, h2, h3, h4 {
+  color: #19202C;
+  font-weight: 700;
+}
+
+h1, h2 {
+  font-size: 2.6rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+h4 {
+  font-size: 1.6rem;
+}
+
+p, a,
+input::placeholder {
+  font-size: 1.6rem;
+  text-decoration: none;
+}
+
+.nav-menu {
+  padding: 0 0 5rem 3.3rem;
+}
+.nav-menu a {
+  display: flex;
+  align-items: center;
+  line-height: 1;
+  height: 4.8rem;
+  padding: 1.4rem 0;
+  width: 100%;
+  color: #898989;
+}
+.nav-menu a:nth-child(3) {
+  margin-bottom: 6rem;
+}
+.nav-menu a .nav-menu__link__text {
+  color: inherit;
+}
+.nav-menu a .nav-menu__link__icon {
+  height: 20px;
+  width: 21px;
+  margin-right: 1.3rem;
+  text-align: center;
+}
+.nav-menu a:hover {
+  color: #FF0000;
+}
+.nav-menu a:hover img {
+  filter: invert(100%) sepia(84%) saturate(6649%) hue-rotate(6deg) brightness(105%) contrast(117%);
+}
+.nav-menu a:hover div {
+  color: inherit;
 }
 
 /*# sourceMappingURL=blocks.css.map */
