--- a/assets/css/assets/blocks/header/header.css
+++ b/assets/css/assets/blocks/header/header.css
@@ -3,6 +3,7 @@
 /* Search form */
 /* Font-colors */
 /* Search-form */
+/* Links */
 header .container {
   height: 8.4rem;
   padding: 0 7rem 0 3.2rem;
@@ -141,7 +142,7 @@ header .container .header__user-block .header__user-block__notifications .notifi
   top: -0.5rem;
   right: -0.5rem;
   border: 1px solid #FFFFFF;
-  background-color: #e52424;
+  background-color: #c2c2c2;
   font-size: 1.2rem;
   color: #ffffff;
   text-align: center;
