--- a/assets/css/assets/blocks/aside/aside.css
+++ b/assets/css/assets/blocks/aside/aside.css
@@ -2,5 +2,14 @@
   width: 20rem;
   height: 100%;
 }
+@media (max-width: 320px) {
+  .container aside {
+    width: 100%;
+    height: 6rem;
+    border-top: 1px solid #f1f1f1;
+    position: absolute;
+    bottom: 0;
+  }
+}
 
 /*# sourceMappingURL=aside.css.map */
