--- a/assets/scss/assets/blocks/aside/aside.scss
+++ b/assets/scss/assets/blocks/aside/aside.scss
@@ -1,6 +1,15 @@
+@import "../../global/breakpoints/breakpoints";
+
 .container {
   aside {
     width: 20rem;
     height: 100%;
+    @media (max-width: $xs) {
+      width: 100%;
+      height: 6rem;
+      border-top: 1px solid #f1f1f1;
+      position: absolute;
+      bottom: 0;
+    }
   }
 }
