--- a/assets/scss/assets/blocks/nav/nav.scss
+++ b/assets/scss/assets/blocks/nav/nav.scss
@@ -4,6 +4,12 @@
 
 .nav-menu {
   padding: 0 0 5rem 3.3rem;
+  @media (max-width: $xs) {
+    display: flex;
+    padding: 0;
+    overflow: hidden;
+    height: 6rem;
+  }
   a {
     display: flex;
     align-items: center;
@@ -24,7 +30,8 @@
       margin-right: 1.3rem;
       text-align: center
     }
-    &:hover {
+    &:hover,
+    &:active {
       color: $font-color__navigation-link_active;
       img {
         filter: invert(100%) sepia(84%) saturate(6649%) hue-rotate(6deg) brightness(105%) contrast(117%);
@@ -34,7 +41,18 @@
       }
     }
 
-    img {
+    @media (max-width: $xs) {
+      flex-direction: column;
+      margin: 0;
+      &:nth-child(1n+5){
+        display: none;
+      }
+      .nav-menu__link__text {
+        font-size: 1rem;
+      }
+      .nav-menu__link__icon {
+        margin: 0 0 0.5rem 0;
+      }
     }
   }
 }
