--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -1,4 +1,5 @@
 @import url("https://use.typekit.net/jrb6nlz.css");
+@import url("https://use.typekit.net/jrb6nlz.css");
 .container aside {
   width: 20rem;
   height: 100%;
@@ -213,7 +214,7 @@ input::placeholder {
 }
 
 .nav-menu {
-  padding: 0 0 5rem 3.3rem;
+  padding: 0 0 6rem 3.3rem;
 }
 @media (max-width: 320px) {
   .nav-menu {
@@ -267,6 +268,71 @@ input::placeholder {
   .nav-menu a .nav-menu__link__icon {
     margin: 0 0 0.5rem 0;
   }
+}
+
+/* Font-colors */
+/* Search-form */
+/* Links */
+/* Importing font: Muli - 300 / 400 / 700 / 800
+   Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
+*/
+/* Font-colors */
+/* Search-form */
+/* Links */
+* {
+  font-family: "Muli", sans-serif;
+  color: #C2C2C2;
+  font-weight: 400;
+}
+
+h1, h2, h3, h4 {
+  color: #19202C;
+  font-weight: 700;
+}
+
+h1, h2 {
+  font-size: 2.6rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+h4 {
+  font-size: 1.6rem;
+}
+
+p, a,
+input::placeholder {
+  font-size: 1.6rem;
+  text-decoration: none;
+}
+
+@media (max-width: 320px) {
+  .subscriptions {
+    display: none;
+  }
+}
+.subscriptions h3 {
+  text-align: center;
+}
+.subscriptions .subscriptions__list {
+  padding: 0 0 6rem 3.3rem;
+}
+.subscriptions .subscriptions__list .subscriptions__link {
+  display: flex;
+  align-items: center;
+  line-height: 1;
+  height: 4.8rem;
+  width: 100%;
+}
+.subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__icon img {
+  width: 2.6rem;
+  height: auto;
+  margin-right: 1rem;
+}
+.subscriptions .subscriptions__list .subscriptions__link .subscriptions__link__text {
+  color: #898989;
 }
 
 /*# sourceMappingURL=blocks.css.map */
