Make settings block

--- a/assets/scss/assets/blocks/blocks.scss
+++ b/assets/scss/assets/blocks/blocks.scss
@@ -1,4 +1,5 @@
 @import "aside/aside";
 @import "header/header";
 @import "nav/nav";
+@import "settings/settings";
 @import "subscriptions/subscriptions";
