subscribed author header ready

--- a/assets/scss/assets/blocks/blocks.scss
+++ b/assets/scss/assets/blocks/blocks.scss
@@ -1,5 +1,7 @@
 @import "aside/aside";
+@import "content-section/content-section";
 @import "header/header";
+@import "main_home-page/main_home-page";
 @import "nav/nav";
 @import "settings/settings";
 @import "subscriptions/subscriptions";
