--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -520,6 +520,7 @@ input::placeholder {
 .subscribed-author {
   height: 280px;
   background-color: rgba(0, 0, 0, 0.07);
+  padding: 2.9rem 0 0 0;
 }
 .subscribed-author .subscribed-author__info {
   display: flex;
@@ -553,13 +554,9 @@ input::placeholder {
 .subscribed-author .subscribed-author__info .subscribed-author__content__navigation .move-right {
   transform: rotate(180deg);
 }
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
+.subscribed-author .subscribed-author__content {
+  padding: 3rem 0 0 0;
 }
-
 /* Font-colors */
 /* Search-form */
 /* Links */
