--- a/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
+++ b/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
@@ -3,8 +3,6 @@
 @import "../../../typography/fonts";
 
 .subscribed-author {
-  height: 280px;
-  background-color: rgba(0, 0, 0, 0.07);
   padding: 2.9rem 0 0 0;
   .subscribed-author__info {
     display: flex;
@@ -45,7 +43,58 @@
 
   .subscribed-author__content {
     padding: 3rem 0 0 0;
-    .video_small {}
+    overflow: hidden;
+    display: inline-grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 4rem;
+    .content__tab {
+      .video_small {
+        width: 25rem;
+        height: 15rem;
+        border-radius: 1.4rem;
+        background-color: rgba(0, 0, 0, 0.07);
+        position: relative;
+        .video-time {
+          width: 4.7rem;
+          height: 2.4rem;
+          background-color: rgba(0, 0, 0, 0.1);
+          border-radius: 1.2rem;
+          position: absolute;
+          bottom: 1rem;
+          right: 1rem;
+          color: white;
+          font-size: 1.4rem;
+          margin: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          line-height: 1.5;
+        }
+      }
+      h4 {
+        margin-top: 1rem;
+      }
+      .content-info {
+        display: flex;
+        justify-content: space-between;
+        a {
+          padding: 0.4rem 0 0 0;
+          font-size: 1.3rem;
+        }
+        .content_data {
+          display: flex;
+          padding: 0.4rem 0 0 0;
+          p {
+            font-size: 1.3rem;
+            margin: 0;
+            &:first-child::after {
+              content: "･";
+              margin: 0 5px;
+            }
+          }
+        }
+      }
+    }
   }
 
 }
