recommended template ready

--- a/assets/css/assets/global/blocks/blocks.css
+++ b/assets/css/assets/global/blocks/blocks.css
@@ -1,6 +1,63 @@
+@charset "UTF-8";
 .container {
   width: 100%;
   margin: 0 auto;
+}
+
+.content__tab {
+  display: inline-block;
+}
+.content__tab .video_medium {
+  width: 54rem;
+  height: 25rem;
+}
+.content__tab .video_small {
+  width: 25rem;
+  height: 15rem;
+}
+.content__tab .video-content {
+  border-radius: 1.4rem;
+  background-color: rgba(0, 0, 0, 0.07);
+  position: relative;
+}
+.content__tab .video-content .video-time {
+  width: 4.7rem;
+  height: 2.4rem;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 1.2rem;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  color: white;
+  font-size: 1.4rem;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.5;
+}
+.content__tab h4 {
+  margin-top: 1rem;
+}
+.content__tab .content-info {
+  display: flex;
+  justify-content: space-between;
+}
+.content__tab .content-info a {
+  padding: 0.4rem 0 0 0;
+  font-size: 1.3rem;
+}
+.content__tab .content-info .content_data {
+  display: flex;
+  padding: 0.4rem 0 0 0;
+}
+.content__tab .content-info .content_data p {
+  font-size: 1.3rem;
+  margin: 0;
+}
+.content__tab .content-info .content_data p:first-child::after {
+  content: "･";
+  margin: 0 5px;
 }
 
 /*# sourceMappingURL=blocks.css.map */
