--- a/assets/css/assets/global/blocks/content_tab.css
+++ b/assets/css/assets/global/blocks/content_tab.css
@@ -1,10 +1,4 @@
 @charset "UTF-8";
-/* Global styles */
-.container {
-  width: 100%;
-  margin: 0 auto;
-}
-
 .content__tab {
   display: inline-block;
 }
@@ -61,4 +55,4 @@
   margin: 0 5px;
 }
 
-/*# sourceMappingURL=global.css.map */
+/*# sourceMappingURL=content_tab.css.map */
