Add control elts + css refactoring

--- a/assets/css/assets/blocks/main_home-page/recommended-content/recommended-content.css
+++ b/assets/css/assets/blocks/main_home-page/recommended-content/recommended-content.css
@@ -41,6 +41,10 @@ input::placeholder {
 .recommended {
   padding: 5rem 0 0 0;
 }
+.recommended .recommended__title {
+  display: flex;
+  justify-content: space-between;
+}
 .recommended .recommended__content {
   padding: 3rem 0 0 0;
   overflow: hidden;
