--- a/assets/scss/assets/blocks/main_home-page/recommended-content/recommended-content.scss
+++ b/assets/scss/assets/blocks/main_home-page/recommended-content/recommended-content.scss
@@ -4,6 +4,10 @@
 
 .recommended {
   padding: 5rem 0 0 0;
+  .recommended__title {
+    display: flex;
+    justify-content: space-between;
+  }
   .recommended__content {
     padding: 3rem 0 0 0;
     overflow: hidden;
