--- a/assets/css/assets/blocks/main_home-page/main_home-page.css
+++ b/assets/css/assets/blocks/main_home-page/main_home-page.css
@@ -56,24 +56,6 @@ input::placeholder {
   height: auto;
   margin-right: 2rem;
 }
-.subscribed-author .subscribed-author__info .subscribed-author__content__navigation {
-  display: flex;
-  padding: 0 14rem 0 0;
-  align-self: flex-end;
-}
-.subscribed-author .subscribed-author__info .subscribed-author__content__navigation div {
-  width: 2.8rem;
-  height: 2.8rem;
-  border-radius: 50%;
-  background-color: #c2c2c2;
-  margin-right: 1rem;
-  background-image: url("../img/nav/Left Arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.subscribed-author .subscribed-author__info .subscribed-author__content__navigation .move-right {
-  transform: rotate(180deg);
-}
 .subscribed-author .subscribed-author__content {
   padding: 3rem 0 0 0;
   overflow: hidden;
@@ -123,6 +105,10 @@ input::placeholder {
 
 .recommended {
   padding: 5rem 0 0 0;
+}
+.recommended .recommended__title {
+  display: flex;
+  justify-content: space-between;
 }
 .recommended .recommended__content {
   padding: 3rem 0 0 0;
