--- a/assets/css/assets/global/global.css
+++ b/assets/css/assets/global/global.css
@@ -61,4 +61,23 @@
   margin: 0 5px;
 }
 
+.video-content__navigation {
+  display: flex;
+  padding: 0 14rem 0 0;
+  align-self: flex-end;
+}
+.video-content__navigation div {
+  width: 2.8rem;
+  height: 2.8rem;
+  border-radius: 50%;
+  background-color: #c2c2c2;
+  margin-right: 1rem;
+  background-image: url("../img/nav/Left Arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.video-content__navigation .move-right {
+  transform: rotate(180deg);
+}
+
 /*# sourceMappingURL=global.css.map */
