--- a/assets/scss/assets/blocks/main_home-page/main_home-page.scss
+++ b/assets/scss/assets/blocks/main_home-page/main_home-page.scss
@@ -1,5 +1,6 @@
 @import "subscribed-author/subscribed-author";
 @import "recommended-content/recommended-content";
+@import "reccomended-channels";
 
 main {
   overflow: auto;
