--- a/assets/css/assets/blocks/settings/settings.css
+++ b/assets/css/assets/blocks/settings/settings.css
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   font-size: 1.6rem;
+  position: absolute;
+  bottom: 0;
 }
 @media (max-width: 320px) {
   .settings {
