--- a/assets/css/assets/global/blocks/video-content_navigation.css
+++ b/assets/css/assets/global/blocks/video-content_navigation.css
@@ -1,7 +1,25 @@
+/* Font-colors */
+/* Search-form */
+/* Links */
+/* Alerts and Notifications */
+/* Borders */
+/* Search form */
+/* BG */
 .video-content__navigation {
   display: flex;
   padding: 0 14rem 0 0;
   align-self: flex-end;
+  align-items: end;
+}
+.video-content__navigation .video-content__subscription-stat {
+  margin: 0;
+  line-height: 1.5;
+  padding: 0 1rem;
+  background-color: #FF0000;
+  outline: 1rem solid #FF0000;
+  margin-right: 5rem;
+  border-radius: 2rem;
+  color: #ffffff;
 }
 .video-content__navigation div {
   width: 2.8rem;
