--- a/assets/scss/assets/blocks/aside/aside.scss
+++ b/assets/scss/assets/blocks/aside/aside.scss
@@ -3,7 +3,9 @@
 .container {
   aside {
     min-width: 25.5rem;
-    height: 100%;
+    height: auto;
+    position: relative;
+    padding: 2.9rem 0 0 0;
     @media (max-width: $xs) {
       width: 100%;
       height: 6rem;
