--- a/assets/scss/assets/blocks/settings/settings.scss
+++ b/assets/scss/assets/blocks/settings/settings.scss
@@ -6,6 +6,8 @@
   display: flex;
   align-items: center;
   font-size: 1.6rem;
+  position: absolute;
+  bottom: 0;
 
   @media (max-width: $xs) {
     display: none;
