--- a/assets/scss/assets/blocks/subscriptions/subscriptions.scss
+++ b/assets/scss/assets/blocks/subscriptions/subscriptions.scss
@@ -3,16 +3,17 @@
 @import "../../typography/fonts";
 
 .subscriptions {
+  padding: 0 0 6rem 3.3rem;
+
   @media (max-width: $xs) {
     display: none;
   }
 
-  h3{
-    text-align: center;
-    }
+  h3 {
+    margin: 0 0 1.9rem 0;
+  }
 
   .subscriptions__list {
-    padding: 0 0 6rem 3.3rem;
     .subscriptions__link {
       display: flex;
       align-items: center;
