Content control elements refactoring

--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -167,7 +167,7 @@ header .container .header__user-block .header__user-block__notifications .notifi
   top: -0.5rem;
   right: -0.5rem;
   border: 1px solid #FFFFFF;
-  background-color: #c2c2c2;
+  background-color: #FF0000;
   font-size: 1.2rem;
   color: #ffffff;
   text-align: center;
