--- a/assets/css/assets/global/blocks/channel_info.css
+++ b/assets/css/assets/global/blocks/channel_info.css
@@ -8,6 +8,9 @@
   align-items: center;
 }
 .channel__info .channel__link .channel__info-comment {
+  cursor: default;
+}
+.channel__info .channel__link .channel__info-comment {
   margin: 0 0 0 2rem;
 }
 .channel__info .channel__link .channel__icon img {
