--- a/assets/scss/assets/colors/colors.scss
+++ b/assets/scss/assets/colors/colors.scss
@@ -1,5 +1,5 @@
 /* Alerts and Notifications */
-$color_notification_active: #c2c2c2;
+$color_notification_active: #FF0000;
 
 /* Borders */
 $color_border-light: #FFFFFF;
@@ -8,4 +8,3 @@ $color_border-light: #FFFFFF;
 $color_search-form_bg: #EBEBEB;
 
 /* BG */
-$color_bg_alert: #FF0000;
