--- a/assets/css/assets/global/blocks/blocks.css
+++ b/assets/css/assets/global/blocks/blocks.css
@@ -18,6 +18,9 @@
   align-items: center;
 }
 .channel__info .channel__link .channel__info-comment {
+  cursor: default;
+}
+.channel__info .channel__link .channel__info-comment {
   margin: 0 0 0 2rem;
 }
 .channel__info .channel__link .channel__icon img {
@@ -28,6 +31,7 @@
 
 .content__tab {
   display: inline-block;
+  cursor: pointer;
 }
 .content__tab .video_medium {
   width: 54rem;
@@ -65,7 +69,7 @@
   display: flex;
   justify-content: space-between;
 }
-.content__tab .content-info a {
+.content__tab .content-info span {
   padding: 0.4rem 0 0 0;
   font-size: 1.3rem;
 }
@@ -105,18 +109,13 @@
   border-radius: 2rem;
   color: #ffffff;
 }
-.video-content__navigation div {
+.video-content__navigation .move-left, .video-content__navigation .move-right {
+  padding: 0.8rem;
   width: 2.8rem;
   height: 2.8rem;
   border-radius: 50%;
   background-color: #c2c2c2;
   margin-right: 1rem;
-  background-image: url("../img/nav/Left Arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.video-content__navigation .move-right {
-  transform: rotate(180deg);
 }
 
 /*# sourceMappingURL=blocks.css.map */
