--- a/assets/css/assets/global/blocks/video-content_navigation.css
+++ b/assets/css/assets/global/blocks/video-content_navigation.css
@@ -21,18 +21,13 @@
   border-radius: 2rem;
   color: #ffffff;
 }
-.video-content__navigation div {
+.video-content__navigation .move-left, .video-content__navigation .move-right {
+  padding: 0.8rem;
   width: 2.8rem;
   height: 2.8rem;
   border-radius: 50%;
   background-color: #c2c2c2;
   margin-right: 1rem;
-  background-image: url("../img/nav/Left Arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.video-content__navigation .move-right {
-  transform: rotate(180deg);
 }
 
 /*# sourceMappingURL=video-content_navigation.css.map */
