--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -312,6 +312,9 @@ input::placeholder {
   align-items: center;
 }
 .channel__info .channel__link .channel__info-comment {
+  cursor: default;
+}
+.channel__info .channel__link .channel__info-comment {
   margin: 0 0 0 2rem;
 }
 .channel__info .channel__link .channel__icon img {
@@ -322,6 +325,7 @@ input::placeholder {
 
 .content__tab {
   display: inline-block;
+  cursor: pointer;
 }
 .content__tab .video_medium {
   width: 54rem;
@@ -359,7 +363,7 @@ input::placeholder {
   display: flex;
   justify-content: space-between;
 }
-.content__tab .content-info a {
+.content__tab .content-info span {
   padding: 0.4rem 0 0 0;
   font-size: 1.3rem;
 }
@@ -399,18 +403,13 @@ input::placeholder {
   border-radius: 2rem;
   color: #ffffff;
 }
-.video-content__navigation div {
+.video-content__navigation .move-left, .video-content__navigation .move-right {
+  padding: 0.8rem;
   width: 2.8rem;
   height: 2.8rem;
   border-radius: 50%;
   background-color: #c2c2c2;
   margin-right: 1rem;
-  background-image: url("../img/nav/Left Arrow.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.video-content__navigation .move-right {
-  transform: rotate(180deg);
 }
 
 /* Alerts and Notifications */
@@ -582,7 +581,7 @@ header .container .header__user-block .header__user-block__notifications .notifi
   top: -0.5rem;
   right: -0.5rem;
   border: 1px solid #FFFFFF;
-  background-color: #c2c2c2;
+  background-color: #FF0000;
   font-size: 1.2rem;
   color: #ffffff;
   text-align: center;
