--- a/assets/scss/assets/blocks/main_home-page/recommended-content/recommended-content.scss
+++ b/assets/scss/assets/blocks/main_home-page/recommended-content/recommended-content.scss
@@ -3,6 +3,11 @@
 @import "../../../typography/fonts";
 
 .recommended {
+
+  @media (max-width: $xs) {
+    display: none;
+  }
+
   .recommended__title {
     display: flex;
     justify-content: space-between;
