--- a/assets/css/assets/blocks/aside/aside.css
+++ b/assets/css/assets/blocks/aside/aside.css
@@ -2,15 +2,18 @@
   min-width: 25.5rem;
   height: auto;
   position: relative;
-  padding: 2.9rem 0 0 0;
+  padding-top: 10rem;
+  background-color: white;
+  z-index: 10;
 }
 @media (max-width: 320px) {
   .container aside {
     width: 100%;
-    height: 6rem;
     border-top: 1px solid #f1f1f1;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    height: 6.1rem;
+    padding: 0;
   }
 }
 
