--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -6,15 +6,18 @@
   min-width: 25.5rem;
   height: auto;
   position: relative;
-  padding: 2.9rem 0 0 0;
+  padding-top: 10rem;
+  background-color: white;
+  z-index: 10;
 }
 @media (max-width: 320px) {
   .container aside {
     width: 100%;
-    height: 6rem;
     border-top: 1px solid #f1f1f1;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    height: 6.1rem;
+    padding: 0;
   }
 }
 
@@ -29,6 +32,20 @@
 /* Font-colors */
 /* Search-form */
 /* Links */
+header {
+  z-index: 100;
+  background-color: white;
+  position: fixed;
+  height: 8.4rem;
+  width: 100%;
+}
+@media (max-width: 320px) {
+  header {
+    padding: 0 1.2rem;
+    z-index: 100;
+    height: inherit;
+  }
+}
 header .container {
   height: 8.4rem;
   padding: 0 7rem 0 3.2rem;
@@ -38,6 +55,15 @@ header .container {
 @media (max-width: 768px) {
   header .container {
     padding: 0 1.6rem;
+  }
+}
+@media (max-width: 576px) {
+  header .container {
+    height: 5rem;
+    width: 28.8rem;
+    padding: 0;
+    display: flex;
+    align-items: center;
   }
 }
 header .container .header__burger-menu > div {
@@ -76,7 +102,7 @@ header .container .header__search-form {
 @media (max-width: 576px) {
   header .container .header__search-form {
     width: auto;
-    margin: 0 2.5rem 0 auto;
+    margin: 0 1.5rem 0 auto;
   }
 }
 header .container .header__search-form form {
@@ -179,6 +205,16 @@ header .container .header__user-block .header__user-block__user-profile {
   width: 4rem;
   height: auto;
 }
+@media (max-width: 576px) {
+  header .container .header__user-block .header__user-block__user-profile {
+    width: 3rem;
+    height: 3rem;
+  }
+  header .container .header__user-block .header__user-block__user-profile img {
+    width: 3rem;
+    height: 3rem;
+  }
+}
 header .container .header__user-block .header__user-block__user-profile img {
   width: 100%;
   height: auto;
@@ -226,12 +262,26 @@ input::placeholder {
 .subscribed-author {
   padding: 2.9rem 0 0 0;
 }
+@media (max-width: 320px) {
+  .subscribed-author .channel__info {
+    display: none;
+  }
+}
 .subscribed-author .subscribed-author__content {
   padding: 3rem 0 0 0;
   overflow: hidden;
   display: inline-grid;
   grid-template-columns: repeat(6, 1fr);
   column-gap: 4rem;
+}
+@media (max-width: 320px) {
+  .subscribed-author .subscribed-author__content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    grid-template-columns: none;
+    margin: 0 auto;
+  }
 }
 
 /* Font-colors */
@@ -273,6 +323,11 @@ input::placeholder {
   text-decoration: none;
 }
 
+@media (max-width: 320px) {
+  .recommended {
+    display: none;
+  }
+}
 .recommended .recommended__title {
   display: flex;
   justify-content: space-between;
@@ -285,6 +340,11 @@ input::placeholder {
   column-gap: 4rem;
 }
 
+@media (max-width: 320px) {
+  .recommended__channels {
+    display: none;
+  }
+}
 .recommended__channels .recommended__channels__content {
   padding: 3rem 0 0 0;
   overflow: hidden;
