--- a/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
+++ b/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
@@ -41,12 +41,26 @@ input::placeholder {
 .subscribed-author {
   padding: 2.9rem 0 0 0;
 }
+@media (max-width: 320px) {
+  .subscribed-author .channel__info {
+    display: none;
+  }
+}
 .subscribed-author .subscribed-author__content {
   padding: 3rem 0 0 0;
   overflow: hidden;
   display: inline-grid;
   grid-template-columns: repeat(6, 1fr);
   column-gap: 4rem;
+}
+@media (max-width: 320px) {
+  .subscribed-author .subscribed-author__content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    grid-template-columns: none;
+    margin: 0 auto;
+  }
 }
 
 /*# sourceMappingURL=subscribed-author.css.map */
