--- a/assets/css/assets/global/blocks/blocks.css
+++ b/assets/css/assets/global/blocks/blocks.css
@@ -33,6 +33,12 @@
   display: inline-block;
   cursor: pointer;
 }
+@media (max-width: 320px) {
+  .content__tab {
+    width: 28.8rem;
+    margin: 0 auto 3rem;
+  }
+}
 .content__tab .video_medium {
   width: 54rem;
   height: 25rem;
@@ -45,6 +51,11 @@
   border-radius: 1.4rem;
   background-color: rgba(0, 0, 0, 0.07);
   position: relative;
+}
+@media (max-width: 320px) {
+  .content__tab .video-content {
+    width: 100%;
+  }
 }
 .content__tab .video-content .video-time {
   width: 4.7rem;
