--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -327,6 +327,12 @@ input::placeholder {
   display: inline-block;
   cursor: pointer;
 }
+@media (max-width: 320px) {
+  .content__tab {
+    width: 28.8rem;
+    margin: 0 auto 3rem;
+  }
+}
 .content__tab .video_medium {
   width: 54rem;
   height: 25rem;
@@ -339,6 +345,11 @@ input::placeholder {
   border-radius: 1.4rem;
   background-color: rgba(0, 0, 0, 0.07);
   position: relative;
+}
+@media (max-width: 320px) {
+  .content__tab .video-content {
+    width: 100%;
+  }
 }
 .content__tab .video-content .video-time {
   width: 4.7rem;
@@ -422,15 +433,18 @@ input::placeholder {
   min-width: 25.5rem;
   height: auto;
   position: relative;
-  padding: 2.9rem 0 0 0;
+  padding-top: 10rem;
+  background-color: white;
+  z-index: 10;
 }
 @media (max-width: 320px) {
   .container aside {
     width: 100%;
-    height: 6rem;
     border-top: 1px solid #f1f1f1;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    height: 6.1rem;
+    padding: 0;
   }
 }
 
@@ -445,6 +459,20 @@ input::placeholder {
 /* Font-colors */
 /* Search-form */
 /* Links */
+header {
+  z-index: 100;
+  background-color: white;
+  position: fixed;
+  height: 8.4rem;
+  width: 100%;
+}
+@media (max-width: 320px) {
+  header {
+    padding: 0 1.2rem;
+    z-index: 100;
+    height: inherit;
+  }
+}
 header .container {
   height: 8.4rem;
   padding: 0 7rem 0 3.2rem;
@@ -454,6 +482,15 @@ header .container {
 @media (max-width: 768px) {
   header .container {
     padding: 0 1.6rem;
+  }
+}
+@media (max-width: 576px) {
+  header .container {
+    height: 5rem;
+    width: 28.8rem;
+    padding: 0;
+    display: flex;
+    align-items: center;
   }
 }
 header .container .header__burger-menu > div {
@@ -492,7 +529,7 @@ header .container .header__search-form {
 @media (max-width: 576px) {
   header .container .header__search-form {
     width: auto;
-    margin: 0 2.5rem 0 auto;
+    margin: 0 1.5rem 0 auto;
   }
 }
 header .container .header__search-form form {
@@ -595,6 +632,16 @@ header .container .header__user-block .header__user-block__user-profile {
   width: 4rem;
   height: auto;
 }
+@media (max-width: 576px) {
+  header .container .header__user-block .header__user-block__user-profile {
+    width: 3rem;
+    height: 3rem;
+  }
+  header .container .header__user-block .header__user-block__user-profile img {
+    width: 3rem;
+    height: 3rem;
+  }
+}
 header .container .header__user-block .header__user-block__user-profile img {
   width: 100%;
   height: auto;
@@ -642,12 +689,26 @@ input::placeholder {
 .subscribed-author {
   padding: 2.9rem 0 0 0;
 }
+@media (max-width: 320px) {
+  .subscribed-author .channel__info {
+    display: none;
+  }
+}
 .subscribed-author .subscribed-author__content {
   padding: 3rem 0 0 0;
   overflow: hidden;
   display: inline-grid;
   grid-template-columns: repeat(6, 1fr);
   column-gap: 4rem;
+}
+@media (max-width: 320px) {
+  .subscribed-author .subscribed-author__content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    grid-template-columns: none;
+    margin: 0 auto;
+  }
 }
 
 /* Font-colors */
@@ -689,6 +750,11 @@ input::placeholder {
   text-decoration: none;
 }
 
+@media (max-width: 320px) {
+  .recommended {
+    display: none;
+  }
+}
 .recommended .recommended__title {
   display: flex;
   justify-content: space-between;
@@ -701,6 +767,11 @@ input::placeholder {
   column-gap: 4rem;
 }
 
+@media (max-width: 320px) {
+  .recommended__channels {
+    display: none;
+  }
+}
 .recommended__channels .recommended__channels__content {
   padding: 3rem 0 0 0;
   overflow: hidden;
