--- a/assets/scss/assets/blocks/aside/aside.scss
+++ b/assets/scss/assets/blocks/aside/aside.scss
@@ -5,13 +5,16 @@
     min-width: 25.5rem;
     height: auto;
     position: relative;
-    padding: 2.9rem 0 0 0;
+    padding-top: calc(1.6rem + 8.4rem);;
+    background-color: white;
+    z-index: 10;
     @media (max-width: $xs) {
       width: 100%;
-      height: 6rem;
       border-top: 1px solid #f1f1f1;
-      position: absolute;
+      position: fixed;
       bottom: 0;
+      height: 6.1rem;
+      padding: 0;
     }
   }
 }
