--- a/assets/scss/assets/blocks/header/header.scss
+++ b/assets/scss/assets/blocks/header/header.scss
@@ -3,6 +3,18 @@
 @import "../../typography/font-colors";
 
 header {
+  z-index: 100;
+  background-color: white;
+  position: fixed;
+  height: 8.4rem;
+  width: 100%;
+
+  @media (max-width: $xs) {
+    padding: 0 1.2rem;
+    z-index: 100;
+    height: inherit;
+  }
+
   .container {
     height: 8.4rem;
     padding: 0 7rem 0 3.2rem;
@@ -11,6 +23,14 @@ header {
 
     @media (max-width: $md) {
       padding: 0 1.6rem;
+    }
+
+    @media (max-width: $sm) {
+      height: 5rem;
+      width:28.8rem;
+      padding: 0;
+      display: flex;
+      align-items: center;
     }
 
     .header__burger-menu > div {
@@ -46,7 +66,7 @@ header {
 
       @media (max-width: $sm) {
         width: auto;
-        margin: 0 2.5rem 0 auto;
+        margin: 0 1.5rem 0 auto;
       }
 
       form {
@@ -147,6 +167,16 @@ header {
         display: inline-block;
         width: 4rem;
         height: auto;
+
+        @media (max-width: $sm) {
+          width: 3rem;
+          height: 3rem;
+          img {
+            width: 3rem;
+            height: 3rem;
+          }
+        }
+
         img {
           width: 100%;
           height: auto;
