--- a/assets/scss/assets/global/blocks/content_tab.scss
+++ b/assets/scss/assets/global/blocks/content_tab.scss
@@ -1,4 +1,11 @@
+@import "../../global/breakpoints/breakpoints";
 .content__tab {
+
+  @media (max-width: $xs) {
+    width: 28.8rem;
+    margin: 0 auto 3rem;
+  }
+
   display: inline-block;
   cursor: pointer;
   .video_medium {
@@ -13,6 +20,11 @@
     border-radius: 1.4rem;
     background-color: rgba(0, 0, 0, 0.07);
     position: relative;
+
+    @media (max-width: 320px) {
+      width: 100%;
+    }
+
     .video-time {
       width: 4.7rem;
       height: 2.4rem;
