task inintial commit

--- a/assets/scss/assets/blocks/blocks.scss
+++ b/assets/scss/assets/blocks/blocks.scss
@@ -1,6 +1,7 @@
 @import "aside/aside";
 @import "content-section/content-section";
 @import "header/header";
+@import "main_channel-page/main_channel-page";
 @import "main_home-page/main_home-page";
 @import "nav/nav";
 @import "settings/settings";
