Author block without mobile

--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -220,6 +220,38 @@ header .container .header__user-block .header__user-block__user-profile img {
   height: auto;
 }
 
+.channel__content {
+  padding: 1rem 7rem 0 0;
+}
+.channel__content .channel__author-info .channel__cover {
+  height: 28rem;
+  width: 100%;
+  border-radius: 1.4rem;
+  background-color: #898989;
+}
+.channel__content .channel__author-info .channel__author__description {
+  padding: 3rem 0 0 0;
+  display: flex;
+  height: auto;
+  width: auto;
+}
+.channel__content .channel__author-info .channel__author__description .author-block__text {
+  padding: 0 0 0 1.4rem;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.channel__content .channel__author-info .video-content__navigation {
+  padding: 0;
+  margin: 0 0 0 auto;
+  align-items: center;
+  align-self: flex-start;
+}
+.channel__content .channel__author-info .video-content__navigation .video-content__subscription-stat {
+  margin: 0 0 0 2rem;
+  position: unset;
+}
+
 /* Font-colors */
 /* Search-form */
 /* Links */
@@ -257,6 +289,7 @@ p, a,
 input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
+  margin: 0;
 }
 
 .subscribed-author {
@@ -321,6 +354,7 @@ p, a,
 input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
+  margin: 0;
 }
 
 @media (max-width: 320px) {
@@ -355,6 +389,7 @@ input::placeholder {
 
 main {
   overflow: auto;
+  padding-top: 8.4rem;
 }
 
 /* Font-colors */
@@ -394,6 +429,7 @@ p, a,
 input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
+  margin: 0;
 }
 
 .nav-menu {
@@ -508,6 +544,7 @@ p, a,
 input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
+  margin: 0;
 }
 
 .subscriptions {
