--- a/assets/css/assets/typography/fonts.css
+++ b/assets/css/assets/typography/fonts.css
@@ -33,6 +33,7 @@ p, a,
 input::placeholder {
   font-size: 1.6rem;
   text-decoration: none;
+  margin: 0;
 }
 
 /*# sourceMappingURL=fonts.css.map */
