--- a/assets/css/assets/blocks/main_channel-page/main_channel-page.css
+++ b/assets/css/assets/blocks/main_channel-page/main_channel-page.css
@@ -1,3 +1,33 @@
-
+.channel__content {
+  padding: 1rem 7rem 0 0;
+}
+.channel__content .channel__author-info .channel__cover {
+  height: 28rem;
+  width: 100%;
+  border-radius: 1.4rem;
+  background-color: #898989;
+}
+.channel__content .channel__author-info .channel__author__description {
+  padding: 3rem 0 0 0;
+  display: flex;
+  height: auto;
+  width: auto;
+}
+.channel__content .channel__author-info .channel__author__description .author-block__text {
+  padding: 0 0 0 1.4rem;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.channel__content .channel__author-info .video-content__navigation {
+  padding: 0;
+  margin: 0 0 0 auto;
+  align-items: center;
+  align-self: flex-start;
+}
+.channel__content .channel__author-info .video-content__navigation .video-content__subscription-stat {
+  margin: 0 0 0 2rem;
+  position: unset;
+}
 
 /*# sourceMappingURL=main_channel-page.css.map */
