--- a/assets/scss/assets/typography/font-colors.scss
+++ b/assets/scss/assets/typography/font-colors.scss
@@ -1,8 +1,11 @@
 /* Font-colors */
 
+$font_color__active: #FF0000;
+$font-color_black: #000000;
 $font-color_bold: #19202C;
 $font-color_main: #C2C2C2;
 $font-color_in-notification: #ffffff;
+
 
 /* Search-form */
 $font-color__search-placeholder: #30384C;
