--- a/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
+++ b/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
@@ -1,3 +1,6 @@
+@import "../../global/breakpoints/breakpoints";
+@import "../../typography/font-colors";
+
 .channel__content {
   padding: 1rem 7rem 0 0;
   .channel__author-info {
@@ -12,11 +15,35 @@
       display: flex;
       height: auto;
       width: auto;
+      margin: 0 0 2.4rem 0;
       .author-block__text{
         padding: 0 0 0 1.4rem;
         display: inline-flex;
         flex-direction: column;
         justify-content: center;
+      }
+    }
+    .channel__navigation {
+
+      .navigation__elem {
+        width: auto;
+        display: inline-block;
+        font-size: 1.8rem;
+        padding: 0 0.5rem;
+        border-radius: 2px;
+        line-height: 1.5;
+        color: $font-color_black;
+        margin: 0 6.2rem 0 0;
+        &:last-child {
+          background-image: url("../img/header/search-form/lens.svg");
+        }
+
+        &:hover,
+        &:active {
+          border-bottom: 2px solid $font_color__active;
+          font-weight: 700;
+          color: $font_color__active;
+        }
       }
     }
     .video-content__navigation {
